Add rental list, rental detail components, rental service and rental model

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <bwm-header></bwm-header>
 
-<p>Welcome to BWM Angular App -v5</p>
-
-<button (click)="clickHandler()">Click Me</button>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
